Update Notebook 5 Data in Python.ipynb

--- a/book/Course files/Notebook 5/Notebook 5 Data in Python.ipynb
+++ b/book/Course files/Notebook 5/Notebook 5 Data in Python.ipynb
@@ -579,7 +579,7 @@
    "source": [
     "Also handy to know: you can use [LaTeX](https://en.wikipedia.org/wiki/LaTeX) commands to add mathematical symbols and equations to your plot.\n",
     "\n",
-    "Important: when you do this, it is a good idea to add an `r` before the quote of your string (see below) to prevent the common backslash `\\` commands of latex as things like tab characters or newline characters. "
+    "Important: when you do this, it is a good idea to add an `r` before the quote of your string (see below) to prevent the common backslash `\\` commands of latex from being treated as things like tab characters or newline characters. "
    ]
   },
   {
