--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -91,19 +91,22 @@
    "source": [
     "## Learning objectives<a class=\"anchor\" id=\"section_6_0\"></a>\n",
     "\n",
-    "Now that we know how to do some basic Python, it is time to use it to understand features and the nature of physical measurements. \n",
+    "Now that we've learned the basics of Python, it's time to apply it to explore features and understand the nature of physical measurements.\n",
     "\n",
-    "In this notebook, we will introduce you to measurements, variance in repeated measurements, and measurement uncertainties. If we do calculations with a value with an uncertainty, we end up with an answer that has an uncertainty as well... But how do we calculate this uncertainty? Moreover, we often do not calculate a value on a single set of repeated measurements but rather on datasets with various mean values of repeated measurements. How do we properly analyse these data? For each topic, a summary is given. What is new, compared to the previous notebooks, is that we have * assignments. These are not mandatory, but can be made to help you improve your knowledge of Python and data-analysis.\n",
+    "In this notebook, we will introduce you to measurements, variance in repeated measurements, and measurement uncertainties. When performing calculations with values that include uncertainties, the results also carry uncertainties — but how do we calculate them? Moreover, we often do not work with a single set of repeated measurements but with datasets containing several mean values of repeated measurements. How do we properly analyze such data?\n",
+    "\n",
+    "For each topic, a summary is given. What is new, compared to the previous notebooks, is that we have * assignments. These are not mandatory, but can be made to help you improve your knowledge of Python and data-analysis.\n",
     "\n",
     "Now that we know how to do some basic Python, it is time to use it to understand features of physical measurements. It is very useful to study the chapter in the online manual as well!\n",
     "\n",
     "After completing this notebook, you are able to:\n",
-    "* calculate the mean, standard deviation and uncertainty of a dataset\n",
-    "* report findings using the scientific conventions\n",
-    "* understand and use Gaussian and Poisson distribution\n",
-    "* identify outliers\n",
-    "* carry out an agreement analysis\n",
-    "* calculate how uncertainties propagate when calculations are performed\n"
+    "\n",
+    "- calculate the mean, standard deviation and uncertainty of a dataset\n",
+    "- report findings using the scientific conventions\n",
+    "- understand and use Gaussian and Poisson distribution\n",
+    "- identify outliers\n",
+    "- carry out an agreement analysis\n",
+    "- calculate how uncertainties propagate when calculations are performed"
    ]
   },
   {
@@ -112,26 +115,25 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "In physics experiments, you try to determine relationships or certain values as accurately as possible. What “as accurately as possible” actually means remains unclear for now. What is hopefully clear right away is that we can almost never determine those values directly. We conduct various experiments to collect data that we can use to determine the relationship and then establish the various parameters in that relationship as accurately as possible. \n",
+    "In physics experiments, you try to determine relationships or certain values as accurately as possible. What “as accurately as possible” actually means remains unclear for now. What should already be clear is that we can almost never determine such values directly. Instead, we conduct experiments to collect data, which we then use to determine the relationship and establish its parameters as accurately as possible.\n",
     "\n",
-    "However, it is never possible to determine the exact value(s) of those parameters: with each new measurement, there will be small fluctuations (especially if you measure very precisely). Over time, we have been able to improve our experiments and take more measurements in less time. This means that, over the course of history, constants such as Planck's constant have been determined with increasing accuracy and that the value has varied over the years.\n",
+    "However, it is never possible to determine the exact value(s) of those parameters. Each new measurement will show small fluctuations, especially when measuring with high precision. Over time, we have been able to improve our experiments and take more measurements in less time. This means that, over the course of history, constants such as Planck's constant have been determined with increasing accuracy and that the value has varied over the years.\n",
     "\n",
-    "The consequence of never being able to determine a value precisely is that when you work with that value, your final answer will never be perfect (determined). It will always be uncertain what the exact value actually is. In this chapter, you will learn how the uncertainty in a measured value affects the final result (you already know the basics, significant figures and associated calculation rules), and how to minimize that uncertainty.\n",
+    "The consequence of never being able to determine a value exactly is that any result based on it will also carry uncertainty. It will always be uncertain what the exact value actually is. In this chapter, you will learn how the uncertainty in a measured value affects the final result (you already know the basics, significant figures and associated calculation rules), and how to minimize that uncertainty.\n",
     "\n",
     "```{note}\n",
     "The terms *measurement error* and *measurement uncertainty* are often used interchangeably. In many cases, measurement uncertainty would be a more accurate description of the situation. A measurement error implies that you are doing something truly *wrong*, without being able to do anything about it. The error arises inherently from the use of an instrument, from the measurement itself. In that case, it would be more accurate to talk about uncertainty. Although we try to make a careful distinction here, in general language use the two terms are often unintentionally interchanged. \n",
-    "\n",
     "```\n",
     "\n",
     "## Goal\n",
-    "\n",
     "A complete data analysis will often consist of the following three phases:\n",
     "\n",
-    "1.  determining the reliability of individual measurements and the dataset as a whole;\n",
-    "2.  finding and determining the pattern in the data, including determining the variables with their associated uncertainties;\n",
-    "3.  an optimal data (re)presentation to convince of phases 1 & 2.\n",
+    "1. determining the reliability of individual measurements and the dataset as a whole;\n",
+    "2. finding and determining the pattern in the data, including determining the variables with their associated uncertainties;\n",
+    "4. an optimal data (re)presentation to convince of phases 1 & 2.\n",
     "\n",
     "The aim of this part of the physics practical is to develop a deeper understanding of the above phases and to learn how to apply the associated techniques.\n",
+    "\n",
     "\n",
     "\n",
     "## Quantities, units, dimension-analysis and constants\n",
@@ -649,7 +651,8 @@
    "metadata": {},
    "source": [
     "### Poisson distribution\n",
-    "A second probability distribution that we introduce here is the Poisson distribution. The Poisson distribution is a discrete (as opposed to the normal distribution) probability distribution, which is used to count independent events within a certain time, whereby the events themselves are also based on a normal distribution. Examples of this are radioactive decay, the number of photons that fall on a detector, etc.\n",
+    "\n",
+    "A second probability distribution we introduce here is the Poisson distribution. Unlike the normal distribution, the Poisson distribution is discrete. It is used to count independent events within a certain time interval, where the events themselves occur randomly. Examples of this are radioactive decay, the number of photons that fall on a detector, etc.\n",
     "\n",
     "The probability of $k$ events within a certain time with an average of $\\lambda$ is given by:\n",
     "\n",
@@ -820,7 +823,7 @@
     "(MO:std:labels)=\n",
     "### Measurement uncertainty and significant figures\n",
     "\n",
-    "An important rule regarding significance is that you first determine the number of decimal places of your uncertainty. If you have fewer than $10^3$ measurement points, the uncertainty has one significant digit. You adjust the significance of your result accordingly, so that the last digit has the same value as your uncertainty. You can use powers of 10 or prefixes to clearly represent the number, see table below.\n",
+    "An important rule regarding significant figures is that you must first determine the number of decimal places in your uncertainty. If you have fewer than $10^3$ measurement points, the uncertainty should be expressed with one significant digit. The significance of your result is then adjusted so that its last digit corresponds to the digit of the uncertainty. You can use powers of 10 or prefixes to clearly represent the number, see table below.\n",
     "\n",
     "<!-- {#tab:powersof10}. -->\n",
     "\n",
@@ -1135,9 +1138,8 @@
     "3.  $Z = 50 \\pm 5$\n",
     "````\n",
     "\n",
-    "### Dimentioning\n",
-    "One advantage of the Calculus method over the Functional Approach is that you can dimension your experiment: based on predefined criteria, you can specify how large the experiment should be, what characteristics it should have, and where most of the time and attention should be focused in order for it to meet the set criteria. The easiest way to explain this is with an example.\n",
-    "\n",
+    "### Dimensioning\n",
+    "One advantage of the Calculus method over the Functional Approach is that it allows you to dimension your experiment: based on predefined criteria, you can determine how large the experiment should be, what characteristics it should have, and where most of the time and attention should be focused to ensure the experiment meets the set criteria. The easiest way to illustrate this is with an example.\n",
     "\n",
     "```{admonition} Example: \n",
     ":class: dropdown, tip\n",
@@ -1184,7 +1186,7 @@
     "</div>\n",
     "\n",
     "\n",
-    "We often measure a quantity as a function of another quantity, for example, the extension of a spring as a function of the spring load or the period of oscillation as a function of the length of the pendulum. The purpose of this can vary. For example, we may ask ourselves: *How (according to which functional relationship) does the elongation depend on the load?* Or: *What is the spring constant of the spring?* We then assume a certain relationship and use that relationship to determine the values of parameters. In the first case, we refer to this as modeling, and in the second case, as adjusting or “fitting.” In statistics, the second case is known as a regression problem. We will discuss this in more detail below.\n",
+    "We often measure a quantity as a function of another quantity—for example, the extension of a spring as a function of the applied load, or the period of a pendulum as a function of its length. The purpose of such measurements can vary. For example, we may ask ourselves: How (according to which functional relationship) does the elongation depend on the load? Or: What is the spring constant of the spring? We then assume a certain relationship and use that relationship to determine the values of parameters. In the first case, we refer to this as modeling, and in the second case, as adjusting or “fitting.” In statistics, the second case is known as a regression problem. We will discuss this in more detail below.\n",
     "\n",
     "Fitting is a procedure that attempts to find a mathematical relationship in a number of (measurement) points. We are then looking for a relationship $F(x)$ that describes the measurement points $M(x)$ in such a way that:\n",
     "\n",
@@ -1226,7 +1228,9 @@
     "\n",
     "### Other fit types\n",
     "\n",
-    "With a least-squares fit, we try to minimize the residual (squared). This works particularly well under the assumption that the uncertainty lies in the dependent variable. We are therefore able to set the independent variable ourselves, or reduce the uncertainty to such an extent that it can be neglected in relation to the uncertainty in the dependent variable. However, the least-squares method is not the only method. There is also, for example, the ‘orthogonal distance regression’ method, or smallest distance method. The method is visualized in {numref}`Figure {number} <fig:ODR>`. We will not provide the further mathematical elaboration here, but how the method can be implemented can be found in this [source](https://docs.scipy.org/doc/scipy/reference/odr.html).\n",
+    "In a least-squares fit, we attempt to minimize the squared residuals. This method works particularly well when the uncertainty is primarily in the dependent variable. In such cases, we can control the independent variable or reduce its uncertainty enough that it becomes negligible compared to the uncertainty in the dependent variable.\n",
+    "\n",
+    "However, the least-squares method is not the only fitting approach. There is also, for example, the ‘orthogonal distance regression’ method, also called smallest distance method. This method is visualized in {numref}`Figure {number} <fig:ODR>`. We will not provide the further mathematical elaboration here, but how the method can be implemented can be found in [source](https://docs.scipy.org/doc/scipy/reference/odr.html).\n",
     "\n",
     "\n",
     "```{figure} Figures/ODR.JPG\n",
