Update Notebook 1 Python Basics.ipynb

--- a/book/Course files/Notebook 1/Notebook 1 Python Basics.ipynb
+++ b/book/Course files/Notebook 1/Notebook 1 Python Basics.ipynb
@@ -180,19 +180,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\n",
-      "world\n",
-      "Goodbye\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Hello\")\n",
     "print(\"world\")\n",
@@ -425,7 +415,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A 'funny' thing happens with the command **b = a**. As we say that b and a are the same, rather than creating a new spot in the memory where the information is stored, the variables **b** and **a** obtain the same *memory address*. If we call upon **a**, Python searches its memory, and obtains the data stored at that  unique id. We can see this using **id** function. "
+    "A 'funny' thing happens with the command **`b = a`**. Instead of creating a new copy of the information, the variables **`b`** and **`a`** are set up to point to the very same object in memory. This means they share a unique ID. If we call upon **`a`** or **`b`**, Python uses this ID to find the data. We can see this unique ID using the **`id()`** function."
    ]
   },
   {
@@ -446,7 +436,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is important to know because if we say **a = b** and we change the value of **b**, the value of **a** changes as well! We will go into more detail later on.  "
+    "This is important to know because if we say **a = b** and we change the value of **b**, the value of **a** can change as well! However, this only happens for certain types of objects. Whether `a` changes depends on if the object is mutable or immutable. We will go into more detail later on. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mutable versus immutable\n",
+    "In Python, variables point to objects in memory. Some objects, like `int`, `str`, `float`, `tuple`, and `bool`, are **immutable**, which means their value can never be changed after they are created. Any operation that seems to modify them actually creates a whole new object, and the variable will then point to this new object.\n",
+    "\n",
+    "Other objects, like a `list`, `dict`, or `set`, are **mutable**. This means they can be **changed in place**. This means that you can alter the original object's contents directly without creating a new object. For example, you can add an item to a list or change a value in a dictionary. Since you are modifying the very same object, its unique ID (`id()`) remains the same.\n",
+    "\n",
+    "If multiple variables point to the same mutable object, any change made through one variable will be seen by all the others.\n",
+    "\n",
+    "For example, consider the following code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 1\n",
+    "b = a\n",
+    "a += 1\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, the variable `a` starts by pointing to the number object `1`. When we write `b = a`, the variable `b` is set to point to the *exact same* object that `a` points to. Now both variables point to the number `1`.\n",
+    "\n",
+    "When we execute `a = 2`, a new object is created to hold the number `2`. The variable `a` is then updated to point to this new object. Because numbers are immutable, the original object `1` cannot be modified into `2`.\n",
+    "\n",
+    "Therefore, `a` now points to a different object (`2`), while `b` continues to point to the original object (`1`). As a result, changing `a` does not affect `b`.\n",
+    "\n",
+    "Now let's see what happens with a mutable object, like a `list`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_a = [1, 2]\n",
+    "list_b = list_a\n",
+    "list_a.append(3)\n",
+    "print(list_b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, the variable `list_a` starts by pointing to a list object `[1, 2]`. When we write `list_b = list_a`, the variable `list_b` is set to point to the *exact same* list object that `list_a` points to. Now both variables refer to a single list in memory.\n",
+    "\n",
+    "When we execute `list_a.append(3)`, something different happens. Because lists are **mutable**, the list object can be **changed in place**. The `.append()` method modifies the original list directly, adding the number `3` to it. No new list object is created.\n",
+    "\n",
+    "Since `list_a` and `list_b` both still point to that single, now-modified list, the change is visible through both variables. This is why printing `list_b` shows `[1, 2, 3]`. As a result, changing the list using `list_a` *does* affect `list_b`."
    ]
   },
   {
@@ -462,6 +514,7 @@
     }
    },
    "source": [
+    "### %whos\n",
     "Sometimes, if you execute a lot of cells, or maybe even re-execute a cell after changing its contents, you might lose track of what variables are defined in the memory of your Python kernel. For this, there is a convenient built-in \"magic\" command called `%whos` that can list for you all the variables that have been defined in your kernel, along with their values:"
    ]
   },
@@ -1050,7 +1103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the example above, something strange happens. We did not change **a**, did we? But remember that **b** is not a copy of **a** with a new location in the memory. Rather than that, **b** obtains the same location in the memory (you can check with id(a)). If we change **b**, we thus change **a**! We can also make tuples with only a single item stored. We have to make use of a comma, otherwise Python will not recognize it as a tuple."
+    "In the example above, something strange happens. We did not change **`a`**, did we? But remember that **`b`** is not a copy of **a** with a new location in the memory. Rather than that, **`b`** obtains the same location in the memory (you can check with `id(a)`). If we change **`b`**, we thus change **`a`**! We can also make tuples with only a single item stored. We have to make use of a comma, otherwise Python will not recognize it as a tuple."
    ]
   },
   {
@@ -1073,7 +1126,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lists are mutable and are thus called variables. However, a tuple cannot be varied and is thus not a variable. It is called an object. Since it is immutable, it requires less space. We can still make effective use of tuples (and lists):"
+    "In Python, both lists and tuples are used to store collections of items. We use variables to refer to them.\n",
+    "The most important difference is that **lists are mutable**, while **tuples are immutable**.\n",
+    "This means that after you create a list, you can change it, by adding, removing, or changing its elements. Because they can be modified, lists are very flexible.\n",
+    "A tuple, on the other hand, cannot be changed once it is created. Its contents are fixed. This makes tuples useful for storing data that you know should not change.\n",
+    "Below is an example of valid use of a list and a tuple:"
    ]
   },
   {
@@ -1093,7 +1150,7 @@
    "metadata": {},
    "source": [
     "**`Exercise 1.7`** \\\n",
-    "Try to change the first value of **b**. In order to do so, make sure **b** becomes a list! You can make use of b = list(a)."
+    "Try to change the first value of **`b`**. In order to do so, make sure **`b`** becomes a list! You can make use of `b = list(a)`."
    ]
   },
   {
@@ -2214,7 +2271,7 @@
    "formats": "ipynb,md"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2228,7 +2285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
