Added explanation of copy vs view when slicing

--- a/book/Course files/Notebook 1/Notebook 1 Python Basics.ipynb
+++ b/book/Course files/Notebook 1/Notebook 1 Python Basics.ipynb
@@ -471,7 +471,7 @@
    "source": [
     "Here, the variable `a` starts by pointing to the number object `1`. When we write `b = a`, the variable `b` is set to point to the *exact same* object that `a` points to. Now both variables point to the number `1`.\n",
     "\n",
-    "When we execute `a = 2`, a new object is created to hold the number `2`. The variable `a` is then updated to point to this new object. Because numbers are immutable, the original object `1` cannot be modified into `2`.\n",
+    "When we execute `a += 1`, Python calculates the result, which is `2`. Because the number `1` is immutable and cannot be changed, Python creates a new object to hold the value `2`. The variable a is then updated to point to this new object. Because numbers are immutable, the original object `1` cannot be modified into `2`.\n",
     "\n",
     "Therefore, `a` now points to a different object (`2`), while `b` continues to point to the original object (`1`). As a result, changing `a` does not affect `b`.\n",
     "\n",
@@ -1088,13 +1088,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we saw in the \"Mutable versus immutable\" section, lists can be changed in place. This is an important property to remember when multiple variables refer to the same list.\n",
+    "\n",
+    "For example, if we try to modify a list through a second variable:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "a = [2,3,4]\n",
-    "b = a\n",
+    "b = a # Both 'a' and 'b' point to the same list\n",
     "b[0] = -10\n",
     "print(a)"
    ]
@@ -1103,7 +1112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the example above, something strange happens. We did not change **`a`**, did we? But remember that **`b`** is not a copy of **a** with a new location in the memory. Rather than that, **`b`** obtains the same location in the memory (you can check with `id(a)`). If we change **`b`**, we thus change **`a`**! We can also make tuples with only a single item stored. We have to make use of a comma, otherwise Python will not recognize it as a tuple."
+    "Since both `a` and `b` point to the exact same mutable object, changing it through `b` also changes what `a` sees. This is a direct consequence of mutability."
    ]
   },
   {
@@ -1128,7 +1137,7 @@
    "source": [
     "In Python, both lists and tuples are used to store collections of items. We use variables to refer to them.\n",
     "The most important difference is that **lists are mutable**, while **tuples are immutable**.\n",
-    "This means that after you create a list, you can change it, by adding, removing, or changing its elements. Because they can be modified, lists are very flexible.\n",
+    "This means that after you create a list, you can change it, by adding, removing, or changing its elements. This mutability makes lists very flexible.\n",
     "A tuple, on the other hand, cannot be changed once it is created. Its contents are fixed. This makes tuples useful for storing data that you know should not change.\n",
     "Below is an example of valid use of a list and a tuple:"
    ]
@@ -1173,8 +1182,8 @@
     "* `complex`: complex-valued floating point numbers\n",
     "* `bool`: boolean \"truth\" values (which can have `True` and `False`)\n",
     "* `str`: strings \n",
-    "* `list`: mutuable list of variables\n",
-    "* `tuple`: immutuable list of variables\n",
+    "* `list`: mutuable sequence of items\n",
+    "* `tuple`: immutuable sequence of items\n",
     "\n",
     "The first four are very simple data types, but actually the last one is more complicated than it looks . The `list` is a vector like-variable type. However, unlike physical vectors, it cannot be multiplied, subtracted, etc. \n",
     "\n",
