Update Notebook 1 Python Basics.ipynb

--- a/book/Course files/Notebook 1/Notebook 1 Python Basics.ipynb
+++ b/book/Course files/Notebook 1/Notebook 1 Python Basics.ipynb
@@ -1020,9 +1020,13 @@
    "source": [
     "### Lists & Tuples<a class=\"anchor\" id=\"sub_section_1_2_1\"></a>\n",
     "\n",
-    "It often happens that you want to store data that belong together (a collection of items). You have different options, we discuss lists & tuples, and subsequent (for numerical purposes) numpy arrays.\n",
+    "It often happens that you want to store data that belong together as a collection of items. In Python, two common ways to do this are with **lists** and **tuples**.\n",
     "\n",
-    "Let us think of storing personal data where we need to know: First name; Family name; Address; City. We then can make a list, see below."
+    "The most important difference between them is that **lists are mutable**, while **tuples are immutable**.\n",
+    "\n",
+    "This means that after you create a list, you can change it by adding, removing, or changing its elements. This mutability makes lists very flexible. A tuple, on the other hand, cannot be changed once it is created. Its contents are fixed, which makes tuples useful for storing data that you know should not change.\n",
+    "\n",
+    "Let's see this with an example. Imagine we want to store personal data: First name, Family name, Address, and City. We can make a list for this, as shown below."
    ]
   },
   {
@@ -1112,7 +1116,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since both `a` and `b` point to the exact same mutable object, changing it through `b` also changes what `a` sees. This is a direct consequence of mutability."
+    "Since both `a` and `b` point to the exact same mutable object, changing it through `b` also changes what `a` sees. This is a direct consequence of mutability.\n",
+    "\n",
+    "We can also make tuples with only a single item stored. We have to make use of a comma, otherwise Python will not recognize it as a tuple."
    ]
   },
   {
@@ -1135,11 +1141,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In Python, both lists and tuples are used to store collections of items. We use variables to refer to them.\n",
-    "The most important difference is that **lists are mutable**, while **tuples are immutable**.\n",
-    "This means that after you create a list, you can change it, by adding, removing, or changing its elements. This mutability makes lists very flexible.\n",
-    "A tuple, on the other hand, cannot be changed once it is created. Its contents are fixed. This makes tuples useful for storing data that you know should not change.\n",
-    "Below is an example of valid use of a list and a tuple:"
+    "For tasks that don't involve changing the data, lists and tuples behave very similarly.\n",
+    "\n",
+    "For example, you can still access individual elements from a tuple using its index, just as you would with a list:"
    ]
   },
   {
