Update Notebook 4 Scientific Computing.ipynb

--- a/book/Course files/Notebook 4/Notebook 4 Scientific Computing.ipynb
+++ b/book/Course files/Notebook 4/Notebook 4 Scientific Computing.ipynb
@@ -626,7 +626,7 @@
    "source": [
     "### Shallow vs. Deep Copies\n",
     "\n",
-    "We've said that list slicing creates a \"shallow copy,\" but what does that mean, especially for nested lists?\n",
+    "We've said that list slicing creates a \"shallow copy,\" but what does that mean? Let's look at an example with nested lists.\n",
     "\n",
     "- A **Shallow Copy** creates a new list, but it populates it with *references* to the items in the original. If those items are mutable (like another list), changes to them will be visible in both lists."
    ]
@@ -651,7 +651,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- A **Deep Copy** creates a new list *and* recursively copies every object inside it, creating a truly independent duplicate. For this, you must use the `copy` module."
+    "- A **Deep Copy** creates a new list *and* recursively copies every object inside it, creating a truly independent duplicate. For this, you can use the `copy` module."
    ]
   },
   {
@@ -670,6 +670,13 @@
     "# Only the deep copy is changed\n",
     "print(f\"Original: {original}\")     # Output: Original: [[1, 2], [3, 4]]\n",
     "print(f\"Deep Copy: {deep_copy}\")  # Output: Deep Copy: [[99, 2], [3, 4]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NumPy `.copy()` makes a shallow copy of the `ndarray`, but since NumPy arrays usually only contain immutable objects, this acts the same as a deep copy. A multidimensional NumPy array is not seen as an array of arrays like a multidimensional list, but is instead seen as a single, continuous block of memory containing all the elements. The array object simply holds metadata (like its shape) that tells NumPy how to interpret this flat block of data as a multidimensional grid."
    ]
   },
   {
