Update Notebook 1 Python Basics.ipynb

--- a/book/Course files/Notebook 1/Notebook 1 Python Basics.ipynb
+++ b/book/Course files/Notebook 1/Notebook 1 Python Basics.ipynb
@@ -1246,6 +1246,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Like Python lists, NumPy arrays are mutable. This means you can change their elements in place after they have been created.\n",
+    "\n",
     "Note  that numpy does not make a distinction between row vectors and column vectors: they are just vectors. But what if we want an array running from 0 to 100, and only the even numbers? Do we type all numbers? Certainly not! We can use for instance numpy's linspace or arange:"
    ]
   },
