Update Notebook 6 Measurement uncertainty.ipynb

--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -140,12 +140,12 @@
     "\n",
     "In physics, we measure physical quantities. We distinguish between vectors (quantities with a direction $\\vec{F}$ (N)) and scalars (quantities with only a value ($m (\\mathrm{kg})$)). The quantity is written in italics ($U$), with the corresponding unit in upright type ($\\mathrm{V}$).\n",
     "\n",
-    "There are five commonly used standard units ($\\mathrm{kg, m, s, K, C}$). There is also a sixth standard unit that you encounter less often ($\\mathrm{cd}$). All other units are derived from these standard units. The derivation of the unit is based on the formula:\n",
+    "Units are standardized by the International System of Units (SI). The five SI-units we use most are $\\mathrm{kg, m, s, K}$ and $\\mathrm{A}$. There is also a sixth and seventh standard unit that you encounter less often ($\\mathrm{cd}$) and ($\\mathrm{mol}$). All other units are derived from these standard units. You can obtain the SI representation of any derived unit by substituting the base-unit dimensions into the defining formula. For example, power equals force times velocity:\n",
     "\n",
-    "```{admonition} Example: Derivation of J/s\n",
+    "```{admonition} Example: Derivation of watt\n",
     ":class: dropdown, tip\n",
     "$P = F\\cdot v$\\\n",
-    "$[\\mathrm{J/s}] = [\\mathrm{kg m s}^{-2}] \\cdot [\\mathrm{m s}^{-1}] = [\\mathrm{kg m}^{2} \\mathrm{s}^{-3}]$\n",
+    "$[\\mathrm{W}] = [\\mathrm{kg m s}^{-2}] \\cdot [\\mathrm{m s}^{-1}] = [\\mathrm{kg m}^{2} \\mathrm{s}^{-3}]$\n",
     "```\n",
     "\n",
     "Similarly, based on units (dimensional analysis), you can derive formulas if you know which quantities may play a role. This will be discussed in much greater depth in the second-year course Physical Transport Phenomena. \n",
@@ -168,16 +168,15 @@
     "```{exercise}\n",
     ":label: ex-eenh\n",
     ":class: dropdown\n",
-    "Provided the equation $F=k \\cdot v^2$, what is the unit of $k$ expressed in SI-units (kg,m,s,C,K)?\n",
+    "Provided the equation $F=k \\cdot v^2$, what is the unit of $k$ expressed in SI-units (kg,m,s,A,K)?\n",
     "```\n",
     "\n",
     "````{solution} ex-eenh\n",
     ":class: dropdown\n",
     "$F = k \\cdot v^2 $\n",
-    "\n",
-    "$[\\mathrm{kg} \\frac{\\mathrm{m}}{\\mathrm{s}^2}] = [..] \\cdot [\\frac{\\mathrm{m}^2}{\\mathrm{s}^2}]$\n",
-    "\n",
-    "$k → [\\frac{\\mathrm{kg}}{\\mathrm{m}}]$\n",
+    "$\\rightarrow k = \\frac{F}{v^2} $\n",
+    "$[k] = [\\frac{\\mathrm{kg} \\frac{\\mathrm{m}}{\\mathrm{s}^2}}{\\frac{\\mathrm{m}^2}{\\mathrm{s}^2}}]$\n",
+    "$[k] = [\\frac{\\mathrm{kg}}{\\mathrm{m}}]$\n",
     "\n",
     "````\n",
     "\n",
